--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,13 @@
             $.post("/filename", JSON.stringify({ file_name: filename }), function (data, status, xhr) {
                 $.getJSON("/filename", function (data, status, xhr) {
                     $("#file_name").text(data.file_name)
+                    $("#chart_content").load("/chart", function (response, status, xhr) {
+                                        console.log("loading chart")
+                                        if (status === "error") {
+                                            var msg = "Sorry but there was an error: ";
+                                            console.log(msg + xhr.status + " " + xhr.statusText);
+                                        }
+                                    });
                 });
             })
 
@@ -80,7 +87,7 @@
                     $.getJSON("/datafiles", function (data, status, xhr) {
                         for (var i = 0; i < data.length; i++) {
                             var table = $("#files_list")
-                            var cell = $("<tr><td style='border: 1px solid black' ><a onclick='read_file(\"" + data[i] + "\")'>" + data[i] + "</a></td></tr>")
+                            var cell = $("<tr style='border: 1px solid black'><td  ><a onclick='read_file(\"" + data[i].file_name + "\")'>" + data[i].file_name + "</a></td><td>"+data[i].size +"</td><td>"+data[i].modify_date+"</td></tr>")
                             table.append(cell);
                         }
                     });    
