--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script>
+        let currentAuth = null;
+
         $(function () {
             console.log("ready")
             $("#tabs").tabs();
@@ -49,18 +51,126 @@
 
         }
 
+        function makeAuthenticatedRequest(settings) {
+            auth = sessionStorage.getItem('bikeAuth');
+            if (!auth) {
+                console.error("Not authenticated");
+                showLoginDialog(); // Show login if auth is missing
+                return $.Deferred().reject("Not authenticated").promise(); // Return a rejected promise
+            }
+
+            // Add Authorization header to the request settings
+            settings.headers = $.extend(settings.headers || {}, {
+                'Authorization': auth
+            });
+
+            // Add error handling for 401 Unauthorized
+            const originalErrorHandler = settings.error;
+            settings.error = function (jqXHR, textStatus, errorThrown) {
+                if (jqXHR.status === 401) {
+                    console.error("Authentication failed (401)");
+                    clearAuth();
+                    showLoginDialog();
+                    $('#login-error').text('Invalid username or password.');
+                } else if (originalErrorHandler) {
+                    originalErrorHandler(jqXHR, textStatus, errorThrown); // Call original error handler
+                } else {
+                    console.error("Request failed:", textStatus, errorThrown);
+                    // Maybe show a generic error message to the user
+                }
+            };
+
+            return $.ajax(settings);
+        }
+
+        function showLoginDialog() {
+            $('#login-error').text(''); // Clear previous errors
+            $('#login-dialog').show();
+            $('#main-content').hide();
+        }
+
+        function hideLoginDialog() {
+            $('#login-dialog').hide();
+            $('#main-content').show();
+        }
+
+        function clearAuth() {
+            currentAuth = null;
+            sessionStorage.removeItem('bikeAuth');
+            $('#username').val(''); // Clear form fields
+            $('#password').val('');
+        }
+
+        function setAuthHeader(username, password) {
+            currentAuth = "Basic " + btoa(username + ":" + password);
+            // Optional: Store in sessionStorage for persistence across page refreshes
+            sessionStorage.setItem('bikeAuth', currentAuth);
+        }
+
+        $(document).ready(function () {
+
+            $('#login-form').on('submit', function (event) {
+                event.preventDefault(); // Prevent default form submission
+                const username = $('#username').val();
+                const password = $('#password').val();
+
+                setAuthHeader(username, password); // Tentatively set auth
+
+                // Try fetching a protected resource to verify credentials
+                makeAuthenticatedRequest({
+                    url: '/filename', // Use a simple GET endpoint for verification
+                    method: 'GET',
+                    dataType: 'json'
+                }).done(function (data) {
+                    console.log("Login successful");
+                    $('#login-error').text('');
+                    hideLoginDialog();
+                    // Load initial data now that we are logged in
+                    //loadCurrentFilename();
+                    //loadFileList();
+                    //loadAnalysisData();
+                    //loadChart();
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    // Error handling (including 401) is done within makeAuthenticatedRequest
+                    // If it wasn't a 401, you might want additional specific error messages here.
+                    if (jqXHR.status !== 401) {
+                        $('#login-error').text('Login failed: ' + (errorThrown || textStatus));
+                        clearAuth(); // Clear the tentative auth if login failed for other reasons
+                    }
+                });
+            });
+        })
     </script>
 
 </head>
 
 <body>
+    <!-- Login Dialog -->
+    <div id="login-dialog" class="dialog-overlay">
+        <div class="dialog-box">
+            <h2>Login Required</h2>
+            <div id="login-error" class="error-message"></div>
+            <form id="login-form">
+                <div>
+                    <label for="username">User:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+
     <div id="header">
         <h1><span class="heading_color">GoBike</span> Racing</h1>
     </div>
 
     <div id="header_menu">
         <ul class="navlist">
-            <li><a href="#">Log in</a></li>
+            <li><a href="#" onclick="showLoginDialog()">Log in</a></li>
             <li><a href="#">Sign up!</a></li>
         </ul>
     </div>
@@ -84,7 +194,11 @@
         <div id="content">
             <div id="home">
                 <script>
-                    $.getJSON("/datafiles", function (data, status, xhr) {
+                 makeAuthenticatedRequest({
+                    url: '/datafiles', // Use a simple GET endpoint for verification
+                    method: 'GET',
+                    dataType: 'json'
+                }).done(function (data, status, xhr) {
                         for (var i = 0; i < data.length; i++) {
                             var table = $("#files_list")
                             var cell = $("<tr style='border: 1px solid black'><td  ><a onclick='read_file(\"" + data[i].file_name + "\")'>" + data[i].file_name + "</a></td><td>" + data[i].size + "</td><td>" + data[i].modify_date + "</td></tr>")
@@ -119,7 +233,8 @@
                         <div id="chart">
                             <div id="chart_content">
                                 <script>
-                                    $("#chart_content").load("/chart", function (response, status, xhr) {
+                                    $("#chart_content").load("/chart", 
+                                    function (response, status, xhr) {
                                         console.log("loading chart")
                                         if (status === "error") {
                                             var msg = "Sorry but there was an error: ";
@@ -135,7 +250,11 @@
                             <div id="data_content">
                                 <script>
                                     console.log("loading data")
-                                    $.getJSON("/data", function (data, status, xhr) {
+                                    makeAuthenticatedRequest({
+                                          url: '/data', // Use a simple GET endpoint for verification
+                                        method: 'GET',
+                                        dataType: 'json'
+                                        }).done(function (data, status, xhr) {
                                         console.log("loading data " + status)
                                         str = JSON.stringify(data)
                                         console.log(str)
@@ -162,7 +281,11 @@
         <div id="footer">
             <div id="file_name">
                 <script>
-                    $.getJSON("/filename", function (data, status, xhr) {
+                    makeAuthenticatedRequest({
+                    url: '/filename', // Use a simple GET endpoint for verification
+                    method: 'GET',
+                    dataType: 'json'
+                }).done(function (data, status, xhr) {
                         $("#file_name").text(data.file_name)
                     });    
                 </script>
